--- a/index.html
+++ b/index.html
@@ -1,48 +1,95 @@
-<section id="about">
-  <h2 class="section-title">About</h2>
-  <p class="section-subtitle">
-    What I do and where I’m heading.
-  </p>
+---
+layout: default
+title: Home
+---
 
-  <div class="grid-2">
-    <div>
-      <p>
-        I work in IT and security, focusing on endpoint management, user support, access, 
-        and the day-to-day operations that keep systems stable. I use tools like CrowdStrike 
-        Falcon, Jira Service Management, Google Workspace, and Microsoft 365 to support users 
-        and maintain a clean operational baseline.
-      </p>
+<h1>James Sacharanski</h1>
+<p><strong>IT & Security · South Jersey · 1 semester away from an M.S. in Cybersecurity (Rowan University)</strong></p>
 
-      <p>
-        Outside my job, I use controlled test environments to build practical technical 
-        skills—mainly system enumeration, misconfiguration analysis, and privilege 
-        escalation. These environments help me understand how systems behave under real 
-        conditions and give me a stronger foundation for security work.
-      </p>
+<hr>
 
-      <p>
-        I’m currently one semester away from completing my M.S. in Cybersecurity at Rowan 
-        University. I’m interested in roles that mix IT operations, security monitoring, and 
-        hands-on analysis, where I can apply what I’ve learned while continuing to grow.
-      </p>
-    </div>
+<h2>About</h2>
+<p>
+I work in IT and security, focusing on endpoint management, user support, access, and
+keeping core systems stable. In my current role, I work with tools like CrowdStrike Falcon,
+Jira Service Management, Google Workspace, and Microsoft 365 to support staff and maintain
+a reliable environment.
+</p>
+<p>
+Outside of work, I use controlled test environments to build practical skills such as
+system enumeration, misconfiguration analysis, and privilege escalation. My goal is to be
+useful on a security-focused team, not just familiar with terminology.
+</p>
+<p>
+I am currently one semester away from completing my M.S. in Cybersecurity at Rowan University
+and I am interested in roles that combine IT operations with security work
+(security operations, endpoint security, or vulnerability/access management).
+</p>
 
-    <div class="card">
-      <strong>Technical Focus</strong>
-      <div class="chip-row">
-        <span class="chip">Endpoint Security (CrowdStrike Falcon)</span>
-        <span class="chip">Windows & Linux Systems</span>
-        <span class="chip">Identity & Access</span>
-        <span class="chip">Email & DNS Configuration</span>
-      </div>
+<hr>
 
-      <strong style="display:block; margin-top:0.9rem;">Building Toward</strong>
-      <div class="chip-row">
-        <span class="chip">Security Operations</span>
-        <span class="chip">Vulnerability & Access Management</span>
-        <span class="chip">System Hardening</span>
-        <span class="chip">Documentation & Process Improvement</span>
-      </div>
-    </div>
-  </div>
-</section>
+<h2>Key skills</h2>
+<ul>
+  <li>Endpoint security with CrowdStrike Falcon (policy configuration, alert handling, host groups)</li>
+  <li>Windows and Linux systems (basic administration and troubleshooting)</li>
+  <li>Identity, access, and onboarding/offboarding workflows</li>
+  <li>Jira Service Management (ticketing, approvals, onboarding flows)</li>
+  <li>Google Workspace / Microsoft 365, including email and DNS (SPF, DKIM, DMARC)</li>
+  <li>Documentation: procedures, access notes, and basic compliance support</li>
+</ul>
+
+<hr>
+
+<h2>Work highlights</h2>
+
+<h3>Endpoint security & operations · Investview Inc.</h3>
+<ul>
+  <li>Helped configure and tune CrowdStrike Falcon policies and host groupings to reduce obvious noise while keeping useful visibility.</li>
+  <li>Handled alert review and routing so genuine issues are easier to identify and handle.</li>
+  <li>Worked on onboarding and access-related processes using Jira Service Management.</li>
+  <li>Assisted with mail and identity changes, including Microsoft 365 to Google Workspace migration and related DNS/authentication records.</li>
+</ul>
+
+<h3>Access review & PCI-related support · ESD Inc. (Contract)</h3>
+<ul>
+  <li>Assisted with user access reviews and documentation to support PCI DSS 4.0 readiness.</li>
+  <li>Helped gather and organize evidence so it was clearer who had access to what and why.</li>
+</ul>
+
+<h3>Application security testing · LS Technologies (Intern)</h3>
+<ul>
+  <li>Supported testing of internal applications in controlled environments.</li>
+  <li>Documented findings with clear reproduction steps and impact to help other teams fix issues.</li>
+</ul>
+
+<hr>
+
+<h2>Practice & learning</h2>
+<p>
+I use test environments to practice:
+</p>
+<ul>
+  <li>System enumeration and service discovery</li>
+  <li>Identifying common misconfigurations</li>
+  <li>Privilege escalation techniques on Windows and Linux</li>
+</ul>
+<p>
+I treat this as a way to build a stronger technical baseline that carries over into real systems.
+</p>
+
+<hr>
+
+<h2>Education</h2>
+<ul>
+  <li><strong>M.S. in Cybersecurity</strong> (in progress, 1 semester remaining) – Rowan University</li>
+</ul>
+
+<hr>
+
+<h2>Contact</h2>
+<ul>
+  <li><strong>Email:</strong> <a href="mailto:sacharanskij@gmail.com">sacharanskij@gmail.com</a></li>
+  <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/james-sacharanski-6a8785272/" target="_blank">linkedin.com/in/james-sacharanski-6a8785272</a></li>
+  <li><strong>GitHub:</strong> <a href="https://github.com/YOURGITHUB" target="_blank">github.com/YOURGITHUB</a></li>
+  <li><strong>Location:</strong> South Jersey, USA</li>
+</ul>
